# slack_data_retriever

./: .gitignore  pyproject.toml
slack_data_retriever/: main.py  slack.py
